# simple_function_logger

./: Cargo.toml  README.md
src/: lib.rs
