[package]
name = "simple_function_logger"
version = "0.1.1"
edition = "2021"
description = "Simple function logger"
authors = ["Baehyunsol <baehyunsol@naver.com>"]
license = "MIT"
repository = "https://github.com/baehyunsol/simple_function_logger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro = true